src/test/deca/context/valid/intermediaire2/arithmetiques/00noVar.deca
// Description:
//    Programme minimaliste réalisant une addition et une soustraction.
//
// Resultats:
//    00noVar.lis
//
// Historique:
//    cree le 08/06/2022

{
    1 + 1;
    1 - 1;
}